2011-07-09  Paul Eggert  <eggert@cs.ucla.edu>

	Add gnulib's strtoimax module, needed on Solaris 8.
	* Makefile.in (GNULIB_MODULES): Add strtoimax.
	* lib/strtoll.c, m4/strtoimax.m4, m4/strtoll.m4: New files,
	automatically imported from gnulib.
	* lib/gnulib.mk, m4/gl-comp.m4: Regenerate.

2011-07-08  Paul Eggert  <eggert@cs.ucla.edu>

	Add gnulib support for pthread_sigmask (Bug#9010).
	* Makefile.in (GNULIB_MODULES): Add pthread_sigmask.
	* configure.in (AC_TYPE_UID_T): New dummy macro.
	Configure gnulib after adjusting LIBS,
	so that gnulib can assume the libraries in LIBS.
	* lib/signal.in.h, m4/pthread_sigmask.m4, m4/signal_h.m4:
	* lib/pthread_sigprocmask.c, lib/sigprocmask.c, m4/signalblocking.m4:
	* lib/pthread_sigmask.c:
	New files, automatically imported from gnulib.
	* lib/gnulib.mk, m4/gl-comp.m4: Automatically-imported update
	due to the above changes.
	* .bzrignore: Add lib/signal.h.

	* lib/getopt.c, lib/unistd.in.h, m4/getopt.m4: Merge from gnulib.

2011-07-07  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in (maintainer-mode): Reflect default in help string.

2011-07-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in: Remove reference to iris4d.h.

2011-07-05  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (HAVE_GCONF): Allow both HAVE_GCONF and HAVE_GSETTINGS.

2011-07-01  Glenn Morris  <rgm@gnu.org>

	* configure.in (SETTINGS_CFLAGS, SETTINGS_LIBS) [HAVE_GCONF]: Fix typo.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* configure.in (HAVE_GSETTINGS): Fix syntax for GSETTINGS tests,
	which made ./configure infloop.

2011-06-30  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (gsettings): New option and check for GSettings.

2011-06-29  Glenn Morris  <rgm@gnu.org>

	* configure.in: Try to test for the required crt*.o files.

2011-06-27  Bill Wohler  <wohler@newt.com>

	* .bzrignore: Add lisp/mh-e/mh-autoloads.el and lisp/mh-e/mh-cus-load.el.

2011-06-25  Paul Eggert  <eggert@cs.ucla.edu>
